[gd_scene load_steps=3 format=3 uid="uid://b2x3yl5wkupux"]

[ext_resource type="Theme" path="res://resources/themes/default_theme.tres" id="1_1e3gj"]
[ext_resource type="Script" uid="uid://cincoop4vc5bx" path="res://scripts/ui/main_menu_controller.gd" id="2_x4gd1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_1e3gj")
script = ExtResource("2_x4gd1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 500.0
theme_override_font_sizes/font_size = 200
text = "Cr-ancher"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainButtons" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="NewGameButton" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "New Game"

[node name="LoadGameButton" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Load Game"

[node name="CollectionButton" type="Button" parent="CenterContainer/MainButtons"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "View Collection"

[node name="SettingsButton" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Settings"

[node name="QuitButton" type="Button" parent="CenterContainer/MainButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="SettingsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="BackButton" type="Button" parent="CenterContainer/SettingsMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Back
"

[node name="FullscreenButton" type="CheckBox" parent="CenterContainer/SettingsMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Fullscreen"

[node name="HSlider" type="HSlider" parent="CenterContainer/SettingsMenu"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="CreditsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/CreditsMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "A Game by Mezzy"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="CenterContainer/CreditsMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Back
"

[connection signal="pressed" from="CenterContainer/MainButtons/NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/LoadGameButton" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/CollectionButton" to="." method="_on_collection_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/MainButtons/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CenterContainer/SettingsMenu/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="CenterContainer/SettingsMenu/FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
